syntax = "proto3";
package catalog.v1;

option go_package = "codegen/api/gen;gen";

import "google/protobuf/timestamp.proto";

message Product {
  int64 id = 1;
  string sku = 2;
  string name = 3;
  string description = 4;
  double price = 5;
  int32 stock = 6;
  google.protobuf.Timestamp created_at = 7;
}

message CreateProductRequest {
  Product product = 1;
}
message CreateProductResponse { Product product = 1; }
message GetProductRequest { int64 id = 1; }
message GetProductResponse { Product product = 1; }
message UpdateProductRequest { Product product = 1; }
message UpdateProductResponse { Product product = 1; }
message DeleteProductRequest { int64 id = 1; }
message DeleteProductResponse { bool ok = 1; }

message Order {
  int64 id = 1;
  int64 product_id = 2;
  int32 quantity = 3;
  double total = 4;
  string customer_id = 5;
  google.protobuf.Timestamp created_at = 6;
}

message CreateOrderRequest { Order order = 1; }
message CreateOrderResponse { Order order = 1; }
message GetOrderRequest { int64 id = 1; }
message GetOrderResponse { Order order = 1; }
message ListOrdersRequest { string customer_id = 1; }
message ListOrdersResponse { repeated Order orders = 1; }

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}
service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}
