syntax = "proto3";

package catalog.v1;

option go_package = ".;pb";

import "common.proto";
import "google/protobuf/timestamp.proto";

message Product {
  string id = 1;
  int32 brand_id = 2;
  string name = 3;
  string sku = 4;
  string summary = 5;
  int32 stock = 6;
  float price = 7;
  google.protobuf.Timestamp created_at = 8;
}

message ProductIdentifier {
  string id = 1;
}

message ListProductsRequest { }
message ListProductsResponse { int32 total = 1; repeated Product items = 2; }
message GetProductResponse { Product product = 1; }
message CreateProductRequest { Product product = 1; }
message CreateProductResponse { Product product = 1; }
message UpdateProductRequest { Product product = 1; }
message UpdateProductResponse { Product product = 1; }

message Brand {
  int32 id = 1;
  string name = 2;
  string slug = 3;
  string logo = 4;
  google.protobuf.Timestamp created_at = 5;
}

message BrandIdentifier {
  int32 id = 1;
}

message ListBrandsRequest { }
message ListBrandsResponse { int32 total = 1; repeated Brand items = 2; }
message GetBrandResponse { Brand brand = 1; }

message CreateBrandRequest { 
  string name = 1;
  string slug = 2;
  string logo = 3;
}

message UpdateBrandRequest { 
  int32 id = 1;
  string name = 2;
  string slug = 3;
  string logo = 4;
}

service CatalogService {
  rpc GetProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc GetProduct(ProductIdentifier) returns (GetProductResponse);  
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);  
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct(ProductIdentifier) returns (common.SuccessResponse);

  rpc ListBrands(ListBrandsRequest) returns (ListBrandsResponse);
  rpc GetBrand(BrandIdentifier) returns (GetBrandResponse);
  rpc CreateBrand(CreateBrandRequest) returns (BrandIdentifier);  
  rpc UpdateBrand(UpdateBrandRequest) returns (common.SuccessResponse);
  rpc DeleteBrand(BrandIdentifier) returns (common.SuccessResponse);  
}
